just the width of the thumbnail

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <img class="rounded-lg w-96" src="./image/images/image-product-1.jpg" alt="Main product image">
             </switch>
              <div class="flex gap-4">
-                <img src="./image/images/image-product-1-thumbnail.jpg" class="w-20 rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
-                <img src="./image/images/image-product-2-thumbnail.jpg" class="w-20 rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
-                <img src="./image/images/image-product-3-thumbnail.jpg" class="w-20 rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
-                <img src="./image/images/image-product-4-thumbnail.jpg" class="w-20 rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
+                <img src="./image/images/image-product-1-thumbnail.jpg" class="w-16 md:w-20 lg:w-20  rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
+                <img src="./image/images/image-product-2-thumbnail.jpg" class="w-16 md:w-20 lg:w-20  rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
+                <img src="./image/images/image-product-3-thumbnail.jpg" class="w-16 md:w-20 lg:w-20  rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
+                <img src="./image/images/image-product-4-thumbnail.jpg" class="w-16 md:w-20 lg:w-20  rounded-lg cursor-pointer border-2 border-transparent hover:border-orange-500 thumbnail">
                 <!-- More thumbnails -->
             </div>
             <!-- Cart Dropdown -->
